<resources>
    <string name="app_name">BarberShop</string>
    <string name="logo_imageView">logo</string>
    <string name="main_welcome_text">Welcome to</string>
    <string name="main_login_button">LOGIN</string>
    <string name="main_register_button">REGISTER</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email">Email*</string>
    <string name="enter_full_name">Enter your last name</string>
    <string name="last_name">Last Name*</string>
    <string name="details">Please enter your details to Register on the App</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password*</string>
    <string name="mobile">Mobile*</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="login_with_your_account">Login with your account</string>
    <string name="login">LOGIN</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_save_changes_button">Save changes</string>
    <string name="go_to_register">GO to Register</string>
    <string name="back_profile_button">Back</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">name_name</string>
    <string name="camera_select_button">CAMERA</string>
    <string name="profile_full_name_text_view">First Name</string>
    <string name="profile_full_name_editText">First name field</string>
    <string name="profile_email_textView">Email</string>
    <string name="profile_phone_textView">Phone</string>
    <string name="profile_pic">profile_pic</string>
    <string name="address">Address:</string>
    <string name="program">Program:</string>
    <string name="barber">Barber:</string>
    <string name="haircut_time">Haircut time:</string>
    <string name="your_booking_information">Your Booking information</string>
    <string name="address_textView">1</string>
    <string name="notification">Notification</string>
    <string name="book">Book</string>
    <string name="history">Historic</string>
    <string name="david">1</string>
    <string name="haircut_duration">1</string>
    <string name="mon_sat_9am_5pm">1</string>
    <string name="profile">Profile</string>
    <string name="log_out_button">OUT</string>
    <string name="logo_home_page">Logo Home Page</string>
    <string name="book_now_button">Book now</string>
    <string name="appointment_history">Appointment history</string>
    <string name="reminder">Reminder:</string>
    <string name="notifications">Notifications</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="select_date_textView">Select Date</string>
    <string name="select_date_button">Jan 01 2023</string>
    <string name="select_time">Select Time</string>
    <string name="select_time_button">10:00pm</string>
    <string name="appointment_textView">Appointment</string>
    <string name="appointment_date_textView">Jan 01 2023</string>
    <string name="appointment_time_textView">10:30</string>
    <string name="reminder_date_textView">Jan 01 2023</string>
    <string name="reminder_time_textView">10:30</string>
    <string name="profile_email_editText">email@yahoo.com</string>
    <string name="profile_phone_editText">0712345678</string>
    <string name="first_name">First name*</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="go_to_login">Go to Login</string>
    <string name="profile_last_name_textView">Last Name</string>
    <string name="profile_last_name_editText">Last Name Field</string>
    <string name="date_picker_button">Pick Date</string>
    <string name="pick_an_hour">Pick an hour</string>
    <string name="phone">Phone:</string>
    <string name="save_changes">Save changes</string>
    <string name="admin_logout_button">Log out</string>
    <string name="all_appointments">All appointments</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="notifications_off">Notifications off </string>
    <string name="notifications_on">Notifications ON </string>
</resources>