<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/purple_200">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_head_textView"
            android:text="@string/details"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_first_name_textView"
            android:layout_below="@+id/register_head_textView"
            android:text="@string/first_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_first_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_first_name_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_last_name_textView"
            android:layout_below="@+id/register_first_name_editText"
            android:text="@string/last_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_last_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_last_name_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_email_textView"
            android:layout_below="@+id/register_last_name_editText"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_password_textView"
            android:layout_below="@+id/register_email_editText"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/register_phone_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_confirm_password_editText"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/mobile"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_phone_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="TextFields,VisualLintTextFieldSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_confirm_password_textView"
            android:layout_below="@+id/register_password_editText"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_confirm_password_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_phone_editText"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/purple_border"
            android:text="@string/register"
            android:textColor="#000000"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />
        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/purple_border"
            android:text="@string/go_to_login"
            android:textColor="#000000"
            android:onClick="goToLogin"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />


    </RelativeLayout>
</ScrollView>