<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/purple_200"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="367dp"
            android:layout_height="186dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/login_head_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_imageView"
            android:text="@string/login_with_your_account"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_head_textView"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/login_password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email_editText"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_textView"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textColorHint="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_editText"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/purple_border"
            android:onClick="loginAccount"
            android:text="@string/login"
            android:textColor="#000000"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/purple_border"
            android:text="@string/go_to_register"
            android:textColor="#000000"
            android:textStyle="bold"
            android:onClick="goToRegisterActivity"
            tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />
    </RelativeLayout>
</ScrollView>